# practical_sat

./: Cargo.toml  ex2_task4.smtlib2  ex5_problems.txt
benches/: coloring.rs  dimacs_parse.rs  main.rs  sudoku.rs
coloring/: Cargo.toml
coloring/assets/: custom.col
coloring/src/: bitvec_incremental.rs  graph.rs  hybrid.rs  one_hot_incremental.rs  test.rs
hidoku/: Cargo.toml
hidoku/assets/: hidoku_10x10_1  hidoku_10x10_10  hidoku_10x10_2  hidoku_10x10_3  hidoku_10x10_4  hidoku_10x10_5  hidoku_10x10_6  hidoku_10x10_7  hidoku_10x10_8  hidoku_10x10_9  hidoku_11x11_1  hidoku_11x11_10  hidoku_11x11_2  hidoku_11x11_3  hidoku_11x11_4  hidoku_11x11_5  hidoku_11x11_6  hidoku_11x11_7  hidoku_11x11_8  hidoku_11x11_9  hidoku_12x12_1  hidoku_12x12_10  hidoku_12x12_2  hidoku_12x12_3  hidoku_12x12_4  hidoku_12x12_5  hidoku_12x12_6  hidoku_12x12_7  hidoku_12x12_8  hidoku_12x12_9  hidoku_3x3_1  hidoku_3x3_10  hidoku_3x3_3  hidoku_3x3_4  hidoku_3x3_5  hidoku_3x3_6  hidoku_3x3_7  hidoku_3x3_8  hidoku_4x4_1  hidoku_4x4_10  (+57 more)
hidoku/src/: hidoku.rs  lib.rs  main.rs  possible_coords.rs  tests.rs
sls/: Cargo.toml
sls/assets/: 003a77d2aa15a5f93aa2cfe79b986c9e-fclqcolor-20-15-15.shuffled-as.sat05-1270.cnf  00be590675417eba2bb2585790ac392d-iso-brn008.shuffled-as.sat05-2933.cnf  017bba0f995e6d9921253e5a59521435-9symml_gr_2pin_w6.shuffled.cnf  037c423f56548082b1935e88c48ffdda-3col120_5_2.shuffled.cnf  03d1d6df36fdec5be7b60e6f0cd382f7-3col280_5_8.shuffled.cnf  (+425 more)
solver/: Cargo.toml
src/: dimacs_emitting_solver.rs  lib.rs  solver.rs  util.rs
sudoku/: Cargo.toml
tetris/: Cargo.toml
(+63 files in other folders)
