[package]
name = "practical_sat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
ipasir-sys = "0.3.0"
regex = "1.10.4"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "main"
harness = false
