[package]
name = "practical_sat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
sudoku = { path = "sudoku" }
coloring = { path = "coloring" }
solver = { path = "solver" }
tetris = { path = "tetris" }
sls = { path = "sls" }

regex = "1.10.4"
gcd = "2.3.0"
